[tool.poetry]
name = "random-quote-generator-66661"
version = "0.1.0"
description = ""
authors = ["korytniuk <harpysee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
